<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/all_48dp">

    <TextView
        android:id="@+id/tv_permission_screen_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_onboarding_permission_headline"
        android:textAppearance="@style/text_headline_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_permission_screen_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_12dp"
        android:text="@string/msg_onboarding_permission_description"
        android:textAppearance="@style/text_headline_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_screen_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_128dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_screen_description">

        <ImageView
            android:id="@+id/iv_permission_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_onboarding_permission_camera"
            android:src="@drawable/ic_onboarding_permission_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_permission_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/msg_onboarding_permission_camera_needed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_permission_camera"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>