<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/all_48dp">

    <TextView
        android:id="@+id/tv_onboarding_welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_onboarding_welcome_headline"
        android:textAppearance="@style/text_headline_large"
        android:textFontWeight="600"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_stronger_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/all_64dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_welcome_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="2"
        android:src="@drawable/ic_workout_onboarding" />

    <TextView
        android:id="@+id/tv_msg_stronger_desc_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_title_onboarding_workout_feature_draw_line"
        android:layout_marginTop="@dimen/all_24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_stronger_desc"
        android:textAppearance="@style/text_headline_small" />

    <TextView
        android:id="@+id/tv_msg_stronger_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro"
        android:text="@string/msg_description_onboarding_workout_feature_draw_line"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg_stronger_desc_headline" />


</androidx.constraintlayout.widget.ConstraintLayout>